<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="72dp">

    <android.support.v7.widget.CardView
        android:id="@+id/tally_cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:foreground="?attr/selectableItemBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tally_title"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:contentDescription="@string/title"
                android:gravity="center"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="Title" />

            <Button
                android:id="@+id/decrementButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_red_light"
                android:contentDescription="@string/subtractbutton"
                android:elevation="2dp"
                android:gravity="center"
                android:minHeight="@dimen/material_button_size"
                android:text="@string/subtract"
                android:textAlignment="center"
                android:textStyle="bold"
                tools:targetApi="lollipop"
                tools:text="-" />

            <TextView
                android:id="@+id/tally_counterText"
                android:layout_width="16dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/zero"
                android:textAlignment="center"
                android:textStyle="bold" />

            <Button
                android:id="@+id/incrementButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_green_light"
                android:contentDescription="@string/addbutton"
                android:elevation="2dp"
                android:gravity="center"
                android:minHeight="@dimen/material_button_size"
                android:text="@string/add"
                android:textAlignment="center"
                android:textStyle="bold"
                tools:targetApi="lollipop"
                tools:text="+" />

        </LinearLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>